--- a/styles.css
+++ b/styles.css
@@ -1,215 +1,438 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    font-family: 'Candara';
+* {
+  margin: 0%;
+  padding: 0%;
+  font-family: "Candara";
 }
 
-html,body{
-    background-size: auto;
-    height: 100%;
-    color: #557174;
+html,
+body {
+  background-size: auto;
+  height: 100%;
+  color: #557174;
 }
 
-.fondo_index{
-    background-color: #C7CFB7;
+.fondo_index {
+  background-color: #c7cfb7;
 }
 
 .title {
-    margin: auto;
-    margin-top: -15%;
-    text-align: center;
-    font-size: 250%;
-    font-weight: bold;
+  margin: auto;
+  margin-top: -15%;
+  text-align: center;
+  font-size: 250%;
+  font-weight: bold;
 }
 
-.carta{
-    margin: auto;
-    margin-top: -4.5%;
-    text-align: center;
-    font-size: 200%;
-    font-weight: bold;
+.carta {
+  margin: auto;
+  margin-top: -4.5%;
+  text-align: center;
+  font-size: 200%;
+  font-weight: bold;
 }
 
-.contenedor{
-    display: flex;
-    background-image: url(/images/frutas_principal.png);
-    background-size: cover;
-    height: 50vh;
-    opacity: 0.2;
+.contenedor {
+  display: flex;
+  background-image: url(/images/frutas_principal.png);
+  background-size: cover;
+  height: 50vh;
+  opacity: 0.2;
 }
 
-.contenedor_carta{
-    display: flex;
-    background-image: url(/images/frutas_principal.png);
-    background-size: cover;
-    height: 15vh;
-    opacity: 0.2;
+.contenedor_carta {
+  display: flex;
+  background-image: url(/images/frutas_principal.png);
+  background-size: cover;
+  height: 15vh;
+  opacity: 0.2;
 }
 
-.quienes_somos{
-    margin-top: 12%;
-    margin-left: 3%;
-    float: left;
+.quienes_somos {
+  margin-top: 12%;
+  margin-left: 3%;
+  float: left;
 }
 
-h1{ 
-    color: #557174;
+.logo_nofondo {
+  margin-right: 73%;
+  margin-top: 30%;
 }
 
-.texto_logo{
-    margin-top: 15%;
-    margin-left: 3%;
-    float: right;
-    font-size: 30px;
+h1 {
+  color: #557174;
 }
 
-.sano_sabroso{
-    margin-top: 7%;
-    margin-left: -20.5%;
-    float: left;
-    font-size: 30px;
+.texto_logo {
+  margin-top: 15%;
+  margin-left: 3%;
+  float: right;
+  font-size: 30px;
 }
 
-.title2{
-    margin-top: 3%;
-    margin-left: 3%;
-    float: left;
+.sano_sabroso {
+  margin-top: 7%;
+  margin-left: -20.5%;
+  float: left;
+  font-size: 30px;
+}
+
+.title2 {
+  margin-top: 3%;
+  margin-left: 3%;
+  float: left;
 }
 
 .ensalada {
-    margin-top: 10%;
-    margin-right: 3%;
-    float: right;
-    size: 25%;
-    max-width: 25%;
-    max-height: 50%;
+  margin-top: 10%;
+  margin-right: 3%;
+  float: right;
+  size: 25%;
+  max-width: 25%;
+  max-height: 50%;
 }
 
-.background_white{
-    margin-top: auto;
-    margin-top: 45%;
-    background-size: cover;
-    height: 70vh;
-    background-color: #D9D9D9;
+.background_white {
+  margin-top: auto;
+  margin-top: 45%;
+  background-size: cover;
+  height: 70vh;
+  background-color: #d9d9d9;
 }
 
-.nuestra_carta{
-    display: flex;
-    margin: auto;
-    margin-top: 2.4%;
-    background-color: #C7CFB7;
-    background-size: cover;
-    height: 10vh;
+.nuestra_carta {
+  display: flex;
+  margin: auto;
+  margin-top: 2.4%;
+  background-color: #c7cfb7;
+  background-size: cover;
+  height: 10vh;
 }
 
-.nuestra_carta_fondo{
-    background-color: #D9D9D9;
+.nuestra_carta_fondo {
+  background-color: #d9d9d9;
 }
 
-.nuestra_carta_titulo{
-    margin: auto;
-    margin-top: 0.5%;
-    text-align: center;
-    font-size: 220%;
-    font-weight: bold;
+.nuestra_carta_titulo {
+  margin: auto;
+  margin-top: 1%;
+  text-align: center;
+  font-size: 220%;
+  font-weight: bold;
 }
 
-.subtitulo_carta{
-    margin: auto;
-    margin-top: 0.5%;
-    text-align: center;
-    font-size: 75%;
+.subtitulo_carta {
+  margin: auto;
+  margin-top: 0.5%;
+  text-align: center;
+  font-size: 75%;
 }
 
-.ensalada_carta{
-    background-color: #B8D283;
-    height: 45vh;
-    width: 30vh;
-    margin-top: 5%;
-    margin-left: 10%;
+.ensalada_carta {
+  background-color: #b8d283;
+  height: 45vh;
+  width: 30vh;
+  margin-top: 5%;
+  margin-left: 10%;
 }
 
-.fotos_carta{
-    border-radius: 20%;
-    height: 57%;
-    width: 84%;
-    margin-top: 10%;
-    margin-left: 8%;
+.fotos_carta {
+  border-radius: 20%;
+  height: 57%;
+  width: 84%;
+  margin-top: 10%;
+  margin-left: 8%;
 }
 
-.cartas_titulo{
-    color: #557174;
-    font-weight: bold;
-    font-size: 200%;
-    text-align: center;
-    margin-top: 10%;
+.cartas_titulo {
+  color: #557174;
+  font-weight: bold;
+  font-size: 200%;
+  text-align: center;
+  margin-top: 10%;
 }
 
-.pizza_carta{
-    background-color: #B8D283;
-    float: right;
-    height: 45vh;
-    width: 30vh;
-    margin-top: auto;
-    margin-top: -16.5% !important;
-    margin-right: 45% !important;
+.pizza_carta {
+  background-color: #b8d283;
+  float: right;
+  height: 45vh;
+  width: 30vh;
+  margin-top: auto;
+  margin-top: -16.5% !important;
+  margin-right: 45% !important;
 }
 
-.poke_bowls{
-    background-color: #B8D283;
-    float: left;
-    height: 45vh;
-    width: 30vh;
-    margin-top: auto;
-    margin-top: -16.5% !important;
-    margin-left: 72% !important;
+.poke_bowls {
+  background-color: #b8d283;
+  float: left;
+  height: 45vh;
+  width: 30vh;
+  margin-top: auto;
+  margin-top: -16.5% !important;
+  margin-left: 72% !important;
 }
 
 .flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-    margin-top: 5%;
-    margin-left: 10%;
-}
-  
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-  
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-}
-  
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-  
-.flip-card-front {
-    background-color: #bbb;
-    color: black;
-}
-  
-.flip-card-back {
-    background-color: #B8D283;
-    color: white;
-    transform: rotateY(180deg);
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+  margin-top: 5%;
+  margin-left: 10%;
 }
 
-.text_in_cards{
-    font-size: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
-    justify-content: left;
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #b8d283;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.text_in_cards {
+  font-size: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
+  justify-content: left;
+}
+
+.titulo1_ensaladas {
+  color: black;
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 2%;
+  margin-left: 2%;
+}
+
+.nombre_ensaladas {
+  color: #557174;
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 2%;
+  margin-left: 2%;
+}
+
+.descripcion_ensaladas {
+  color: black;
+  font-size: 25px;
+  margin-top: 0.5%;
+  margin-left: 2%;
+}
+
+.v-line {
+  border-left: solid #557174;
+  height: 95%;
+  left: 75%;
+  position: absolute;
+}
+
+.precio_ensaladas {
+  color: black;
+  font-size: 25px;
+  margin-top: 0%;
+  margin-left: 80%;
+}
+
+.menu_del_dia_titulos {
+  color: #557174;
+  font-size: 40px;
+  font-weight: bold;
+  justify-content: center;
+  text-align: center;
+  margin-top: 2%;
+}
+
+.menu_del_dia_subtitulos {
+  color: #557174;
+  font-size: 25px;
+  justify-content: center;
+  text-align: center;
+}
+
+.menu_platos {
+  color: black;
+  font-size: 25px;
+  justify-content: center;
+  text-align: center;
+  margin-top: 1.5%;
+}
+
+.opciones_menu {
+  color: #557174;
+  font-size: 25px;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+}
+
+.precio_menu {
+  color: black;
+  font-size: 25px;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+}
+
+.container {
+  width: 100%;
+  margin: auto;
+  height: 200vh;
+}
+
+.navbar {
+  width: 100%;
+  box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 62px;
+}
+
+.navbar .menu-items {               /*FONDO MENU */
+  display: flex;
+  height: 150vh;
+  background: rgba(255, 255, 255, 0.846);
+}
+
+.navbar .nav-container li {
+  list-style: none;
+}
+
+.navbar .nav-container a {        /*COLORES LETRAS MENU */
+  text-decoration: none;
+  color: #557174;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  padding: 0.7rem;
+  
+}
+
+.navbar .nav-container a:hover {
+  font-weight: bolder;
+}
+
+.nav-container {
+  display: block;
+  position: relative;
+  height: 60px;
+}
+
+.nav-container .checkbox {
+  position: absolute;
+  display: block;
+  height: 32px;
+  width: 32px;
+  top: 20px;
+  left: 20px;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.nav-container .hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  top: 17px;
+  left: 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-container .hamburger-lines .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: #0e2431;
+}
+
+.nav-container .hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.navbar .menu-items {
+  padding-top: 370px;
+  height: 100vh;
+  width: 100%;
+  transform: translate(-150%);
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.5s ease-in-out;
+  text-align: center;
+}
+
+.navbar .menu-items li {
+  margin-bottom: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.logo {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  font-size: 1.2rem;
+  color: #737f86;
+}
+
+.nav-container input[type="checkbox"]:checked ~ .menu-items {
+  transform: translateX(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .logo {
+  display: none;
 }
