--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 
 .logo_nofondo {
   margin-right: 73%;
-  margin-top: 30%;
+  margin-top: 1%;
 }
 
 h1 {
@@ -71,14 +71,15 @@ h1 {
 
 .sano_sabroso {
   margin-top: 7%;
-  margin-left: -27%;
+  margin-left: -20%;
   float: left;
   font-size: 30px;
+  justify-content: center;
 }
 
 .title2 {
   margin-top: 3%;
-  margin-left: -27%;
+  margin-left: 3%;
   float: left;
 }
 
@@ -122,9 +123,8 @@ h1 {
 
 .subtitulo_carta {
   margin: auto;
-  margin-top: 0.5%;
   text-align: center;
-  font-size: 75%;
+  font-size: 60%;
 }
 
 .ensalada_carta {
@@ -315,13 +315,13 @@ h1 {
   justify-content: space-between;
   align-items: center;
   height: 62px;
-  z-index: 1;
+  z-index: 3;
 }
 
 .navbar .menu-items {
   /*FONDO MENU */
   display: flex;
-  height: 150vh;
+  height: 100vh;
   background: rgba(255, 255, 255, 0.846);
   z-index: 1;
 }
@@ -335,7 +335,7 @@ h1 {
   text-decoration: none;
   color: #557174;
   font-weight: bolder;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   padding: 0.7rem;
 }
 
@@ -397,7 +397,8 @@ h1 {
 }
 
 .navbar .menu-items {
-  padding-top: 370px;
+  position: fixed;
+  padding-top: 35vh;
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
@@ -521,7 +522,7 @@ a {
   text-decoration: none;
 }
 
-.reserva_card{
+.reserva_card {
   border: 5px solid red;
   background-color: white;
   width: 420px;
@@ -533,6 +534,207 @@ a {
   margin: -25px 0 0 -25px;
 }
 
-.reserva{
+.reserva {
   font-size: 20px;
+}
+
+.menu_letras {
+  font-size: 2em;
+  margin-left: 3.5%;
+  font-weight: bold;
+  display: flex;
+}
+
+.testbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3%;
+  padding: 20px;
+}
+
+form {
+  width: 50%;
+  padding: 20px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0 0 8px black;
+}
+input,
+select,
+textarea {
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+input {
+  width: calc(100% - 10px);
+  padding: 5px;
+}
+input[type="date"] {
+  padding: 4px 5px;
+}
+textarea {
+  width: calc(100% - 12px);
+  padding: 5px;
+}
+.item:hover p,
+.item:hover i,
+.question:hover p,
+.question label:hover,
+input:hover::placeholder {
+  color: black;               /*BOTON DEL CALENDARIO COLOR*/
+}
+.item input:hover,
+.item select:hover,
+.item textarea:hover {
+  border: 1px solid transparent;
+  box-shadow: 0 0 3px 0 #557174;
+  color: #557174;
+}
+.item {
+  position: relative;
+  margin: 10px 0;
+}
+.item span {
+  color: red;
+}
+input[type="date"]::-webkit-inner-spin-button {
+  display: none;
+}
+.item i,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  font-size: 20px;
+  color: #557174;
+}
+.item i {
+  right: 1%;
+  top: 25px;
+  z-index: 1;
+}
+[type="date"]::-webkit-calendar-picker-indicator {
+  right: 1%;
+  z-index: 2;
+  opacity: 0;
+  cursor: pointer;
+}
+input[type="radio"],
+input[type="checkbox"] {
+  display: none;
+}
+label.radio {
+  position: relative;
+  display: inline-block;
+  margin: 5px 20px 15px 0;
+  cursor: pointer;
+}
+.question span {
+  margin-left: 30px;
+}
+.question-answer label {
+  display: block;
+}
+label.radio:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+}
+
+.btn-block {
+  margin-top: 10px;
+  text-align: center;
+}
+button {
+  width: 150px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background: #557174;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+}
+button:hover {
+  background: #C7CFB7;
+}
+@media (min-width: 568px) {                      /*RESPONSIVE FORM */
+  .name-item,
+  .city-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .name-item input,
+  .name-item div {
+    width: calc(50% - 20px);
+  }
+  .name-item div input {
+    width: 97%;
+  }
+  .name-item div label {
+    display: block;
+    padding-bottom: 5px;
+  }
+}
+
+.reserva_nombre{
+  font-size: 25px;
+  margin-left: 46%;
+  margin-top: 2%;
+
+}
+
+.direccion_titulo{
+  font-size: 35px;
+  font-weight: bold;
+  margin-top: 1%;
+  margin-left: 1.5%;
+}
+
+.direccion{
+  font-size: 25px;
+  margin-top: 1%;
+  color: black;
+  justify-content: center;
+  margin-left: 2%;
+}
+
+.direccion_2{
+  font-size: 25px;
+  margin-left: 2%;
+  margin-top: 1%;
+  color: #746C6C;
+  justify-content: center;
+}
+
+.informacion{
+  font-size: 25px;
+  margin-left: 2%;
+  margin-top: 1%;
+  color: #746C6C;
+  justify-content: center;
+}
+
+.link_hr{
+  text-decoration: none;
+  color: #746C6C;
+  text-decoration: underline;
+}
+
+.mapa_google{
+  margin-left: 30%;
+  margin-top: 2%;
+}
+
+.informacion_metro{
+  font-size: 25px;
+  margin-top: 1%;
+  color: black;
+  justify-content: center;
+  margin-left: 2%;
 }
