--- a/styles.css
+++ b/styles.css
@@ -63,15 +63,17 @@ h1 {
 }
 
 .texto_logo {
-  margin-top: 15%;
-  margin-left: 3%;
+  margin-top: -23%;
+  margin-left: 30%;
+  margin-right: 2%;
   float: right;
   font-size: 30px;
 }
 
 .sano_sabroso {
-  margin-top: 7%;
-  margin-left: -20%;
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 45%;
   float: left;
   font-size: 30px;
   justify-content: center;
@@ -84,7 +86,7 @@ h1 {
 }
 
 .ensalada {
-  margin-top: 10%;
+  margin-top: -19%;
   margin-right: 3%;
   float: right;
   size: 25%;
