--- a/styles.css
+++ b/styles.css
@@ -494,7 +494,7 @@ h1 {
   color: #557174;
 }
 
-.cta svg {
+.cta svg {                      /*FLECHA BOTON*/
   position: relative;
   top: 0;
   margin-left: 10px;
@@ -510,6 +510,10 @@ h1 {
 .cta:hover:before {
   width: 100%;
   background: #b8d283;
+}
+
+.cta:hover{
+  background-color: #d9d9d9;
 }
 
 .cta:hover svg {
