--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
   height: 100%;
   color: #557174;
 }
+/* -------------------------------------- INDEX ---------------------------------------------- */
 
 .fondo_index {
   background-color: #c7cfb7;
@@ -94,6 +95,10 @@ h1 {
   max-height: 50%;
 }
 
+/* ------------------------------------------------------------------------------------------- */
+
+
+/* -------------------------------------- NUESTRA CARTA---------------------------------------- */
 .background_white {
   margin-top: auto;
   margin-top: 45%;
@@ -173,6 +178,8 @@ h1 {
   margin-left: 72% !important;
 }
 
+/* CARTAS QUE GIRAN */
+
 .flip-card {
   background-color: transparent;
   width: 300px;
@@ -192,7 +199,7 @@ h1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.flip-card:hover .flip-card-inner {
+.flip-card:hover .flip-card-inner {                 /* cuando pasamos el ratón por encima de la carta, gira */
   transform: rotateY(180deg);
 }
 
@@ -205,12 +212,7 @@ h1 {
   backface-visibility: hidden;
 }
 
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
+.flip-card-back {                                   /* color de fondo de la carta cuando gira */
   background-color: #b8d283;
   color: white;
   transform: rotateY(180deg);
@@ -222,6 +224,10 @@ h1 {
   margin-right: 5%;
   justify-content: left;
 }
+
+/* ------------------------------------------------------------------------------------------- */
+
+/* -------------------------------- NUESTRAS ENSALADAS---------------------------------------- */
 
 .titulo1_ensaladas {
   color: black;
@@ -246,8 +252,8 @@ h1 {
   margin-left: 2%;
 }
 
-.v-line {
-  border-left: solid #557174;
+.v-line {                           /* linea que separa el texto de las ensaladas de los precios */
+  border-left: solid #557174;               
   height: 95%;
   left: 75%;
   position: absolute;
@@ -259,6 +265,10 @@ h1 {
   margin-top: 0%;
   margin-left: 80%;
 }
+
+/* ------------------------------------------------------------------------------------------- */
+
+/* ------------------------------------- MENÚ DEL DÍA ---------------------------------------- */
 
 .menu_del_dia_titulos {
   color: #557174;
@@ -300,6 +310,10 @@ h1 {
   font-weight: bold;
 }
 
+/* ------------------------------------------------------------------------------------------- */
+
+/* ------------------------------- MENÚ DE NAVEGACIÓN ---------------------------------------- */
+
 .container {
   width: 100%;
   margin: auto;
@@ -320,8 +334,7 @@ h1 {
   z-index: 3;
 }
 
-.navbar .menu-items {
-  /*FONDO MENU */
+.navbar .menu-items {                                    /* fondo menú */
   display: flex;
   height: 100vh;
   background: rgba(255, 255, 255, 0.846);
@@ -332,17 +345,12 @@ h1 {
   list-style: none;
 }
 
-.navbar .nav-container a {
-  /*COLORES LETRAS MENU */
+.navbar .nav-container a {                              /* colores de las letras del menú */
   text-decoration: none;
   color: #557174;
   font-weight: bolder;
   font-size: 1.5rem;
   padding: 0.7rem;
-}
-
-.navbar .nav-container a:hover {
-  font-weight: bolder;
 }
 
 .nav-container {
@@ -384,6 +392,7 @@ h1 {
   background: #0e2431;
 }
 
+/* lo que hacen las lineas cuando pasas el ratón por encima */
 .nav-container .hamburger-lines .line1 {
   transform-origin: 0% 0%;
   transition: transform 0.4s ease-in-out;
@@ -397,6 +406,7 @@ h1 {
   transform-origin: 0% 100%;
   transition: transform 0.4s ease-in-out;
 }
+/* ------------------------------------------------------- */
 
 .navbar .menu-items {
   position: fixed;
@@ -443,6 +453,10 @@ h1 {
 .nav-container input[type="checkbox"]:checked ~ .logo {
   display: none;
 }
+
+/* ------------------------------------------------------------------------------------------- */
+
+/* ------------------------------- HORARIOS RESERVAS ----------------------------------------- */
 
 .titulo_horarios {
   color: #557174;
@@ -494,7 +508,7 @@ h1 {
   color: #557174;
 }
 
-.cta svg {                      /*FLECHA BOTON*/
+.cta svg {                                        /* flecha botón */
   position: relative;
   top: 0;
   margin-left: 10px;
@@ -507,7 +521,7 @@ h1 {
   transition: all 0.3s ease;
 }
 
-.cta:hover:before {
+.cta:hover:before {                 /* color del botón cuando se pasa por encima el ratón */
   width: 100%;
   background: #b8d283;
 }
@@ -528,21 +542,9 @@ a {
   text-decoration: none;
 }
 
-.reserva_card {
-  border: 5px solid red;
-  background-color: white;
-  width: 420px;
-  height: 470px;
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  left: 40%;
-  margin: -25px 0 0 -25px;
-}
+/* ------------------------------------------------------------------------------------------- */
 
-.reserva {
-  font-size: 20px;
-}
+/* ------------------------------- FORMULARIO RESERVA ---------------------------------------- */
 
 .menu_letras {
   font-size: 2em;
@@ -668,8 +670,7 @@ button {
 button:hover {
   background: #c7cfb7;
 }
-@media (min-width: 568px) {
-  /*RESPONSIVE FORM */
+@media (min-width: 568px) {                         /* responsive para el formulario */
   .name-item,
   .city-item {
     display: flex;
@@ -694,6 +695,10 @@ button:hover {
   margin-left: 46%;
   margin-top: 2%;
 }
+
+/* ------------------------------------------------------------------------------------------- */
+
+/* ------------------------------------ DONDE ESTAMOS ---------------------------------------- */
 
 .direccion_titulo {
   font-size: 35px;
